# HilberinkMedia

hilberink-media/hilberinkmedia/app/: globals.css  layout.tsx  page.tsx
hilberink-media/hilberinkmedia/app/about/: page.tsx
hilberink-media/hilberinkmedia/app/code/: page.tsx
hilberink-media/hilberinkmedia/app/components/: Repo.tsx  RepoDirs.tsx  header.tsx
hilberink-media/hilberinkmedia/app/portfolio/: page.tsx
hilberink-media/hilberinkmedia/app/test/: page.tsx
next-test/: .env  openai.py
next-test/1st-app/: package-lock.json  package.json
next-test/1st-app/app/: globals.css  layout.tsx  page.tsx
next-test/1st-app/app/about/: layout.tsx  (+1 more)
nextjs-blog/: package-lock.json  package.json  postcss.cofig.js
nextjs-blog/components/: layout.js
nextjs-blog/lib/: posts.js
nextjs-blog/pages/: _app.js  index.js
nextjs-blog/pages/posts/: [id].js
nextjs-blog/posts/: readme.md  test-now.md  test2.md
nextjs-blog/styles/: globals.css  utils.module.css
pycharm-projects/: pyproject.toml
pycharm-projects/htmxstarter/: api.py  db.sqlite3  manage.py
pycharm-projects/htmxstarter/htmxstarter/: asgi.py  settings.py  urls.py  wsgi.py
pycharm-projects/htmxstarter/polls/: models.py  urls.py  views.py
pycharm-projects/htmxstarter/polls/migrations/: 0001_initial.py  0002_content_media_card.py
pythonProject/: pyproject.toml
pythonProject/arr-mgr/: consist.py  crew.py  dispatcher.py  industries.py  locations.py  products.py  readme.md  rollingstock.json  rollingstock.py  test.py  timetable.py
pythonProject/arr-mgr/model/: db_engine.py  timetable.model.py
(+22 files in other folders)
