[tool.poetry]
name = "pycharm-projects"
version = "0.1.0"
description = ""
authors = ["Arnold Hilberink <104128195+NovioArnold@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pycharm_projects"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
